# k8s-manifests

./: .gitignore  .kustomanager.lock.yaml  .pre-commit-config.yaml  .yamllint  README.md  delete.sh  kerria.lock.yaml  kerria.repo.yaml  pyproject.toml
.github/workflows/: build-generators.yaml
applicationsets/: application.yaml  applicationset.yaml  appproject.yaml  kustomization.yaml
cluster-local/: .kerriaignore
cluster-local/applicationset/: application.yaml  applicationset.yaml  appproject.yaml  kustomization.yaml
cluster-local/argocd/: httproute.yaml  kustomization.yaml  namespace.yaml
cluster-local/coredns/: configmap.yaml  kustomization.yaml
cluster-local/cosi/: README.md  kustomization.yaml  namespace.yaml
cluster-local/debug/: deployment.yaml  kustomization.yaml
cluster-local/deeppharmgraph/: kustomization.yaml
cluster-local/envoy-gateway/: kustomization.yaml
cluster-local/gateway/: envoyproxy.yaml  gateway.yaml  gatewayclass.yaml  kustomization.yaml
cluster-local/keycloak/: cluster.postgres.yaml  configmap.yaml  deployment.yaml  httproute.yaml  kustomization.yaml
cluster-local/keycloak-provider/: deploymentruntimeconfig.yaml  kustomization.yaml  provider.yaml
cluster-local/noobaa/: bucketaccessclass.yaml  bucketclass.yaml  kustomization.yaml  noobaagenerator.yaml
cluster-local/redis-operator/: kustomization.yaml
cluster-local/reflector/: kustomization.yaml  namespace.yaml
kustomanager/: __main__.py  builder.py  data.py  hasher.py  kustomanager.spec.yaml  kustomanagerlockfile.spec.yaml  meta.py  template.py  util.py
(+319 files in other folders)
